fix lesson spacing

--- a/style/panes/leftBar.css
+++ b/style/panes/leftBar.css
@@ -42,6 +42,10 @@
     font-weight: bold;
 }
 
+.lesson-link-wrapper{
+    margin: 10px;
+}
+
 .new-project-button{
     background: var(--new-button-background);
     border-radius: 5px;
